--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,9 +48,9 @@ section {
     justify-content: center;
     align-items: center;
     width: 50%;
-    border: 1px red solid;
     margin: 5vh auto;
     background-color: var(--section-color-1);
+    border-radius: 4px;
 }
 
 
@@ -122,3 +122,23 @@ section {
 
 
 /*Randomize button styling*/
+#button-section {
+    background-color: var(--background-color-1);
+    height: 5vh;
+}
+
+#button-section button {
+    height: 100%;
+    width: 10vw;
+    border-radius: 8px;
+    font-size: 24px;
+    font-weight: 550;
+    color: var(--text-color-2);
+    background-color: var(--button-color);
+}
+
+#button-section button:hover {
+    background-color: var(--text-color-1);
+    transition: 0.2s;
+    cursor: pointer;
+}
