Added bootstrap layout and responsive design

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,144 +1,3 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-:root {
-    --text-color-1: #ceab12;
-    --text-color-2: #1e4877;
-    --background-color-1: #388092;
-    --section-color-1: rgba(236, 236, 236, 0.692);
-    --button-color: #88ad43;
-}
-
-html {
-    color: var(--text-color-2);
-    background-color: var(--background-color-1);
-    font-family: sans-serif;
-}
-
-header {
-    height: 25vh;
-    position: relative;
-    border: 10px solid var(--text-color-1);
-}
-
-header img {
-    object-position: center;
-    object-fit: cover;
-    width: 100%;
-    height: 23.5vh;
-    opacity: 50%;
-}
-
-header h1 {
-    position: absolute;
-    left: 40%;
-    top: 40%;
-    color: var(--text-color-1);
-    font-size: 72px;
-    font-weight: bold;
-    text-shadow: 0 0 15px black;
-}
-
-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    margin: 5vh auto;
-    background-color: var(--section-color-1);
-    border-radius: 4px;
-}
-
-
-/*Instruction section styles*/
-
-#instructions-section {
-    margin-top: 1vh;
-}
-
-#instructions-section h2 {
-    font-size: 36px;
-}
-
-#instructions-section p {
-    font-size: 18px;
-    font-weight: 550;
-    text-align: center;
-    line-height: 1.6;
-    width: 40%;
-    margin: 15px auto;
-}
-
-
-/*Pokemon section styles*/
-
-#pokemon-section {
-    height: 20vh;
-    justify-content: center;
-    margin-bottom: 0;
-}
-
-#pokemon-section h2 {
-    font-size: 36px;
-}
-
-#pokemon-section h3 {
-    font-size: 32px;
-    margin-top: 1vh;
-    color: var(--text-color-1);
-    text-shadow: 0 0 15px var(--text-color-2);
-}
-
-
-/*Type section styles*/
-
-#type-section {
-    margin-top: 1vh;
-    flex-direction: row;
-}
-
-.type-div {
-    margin: 0 2vw;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 15%;
-    padding: 1vh 0;
-}
-
-.type-div p {
-    font-weight: 600;
-    font-size: 20px;
-    background-color: var(--text-color-1);
-    border: 2px solid var(--text-color-2);
-    border-radius: 4px;
-    padding: 6px;
-}
-
-
-/*Randomize button styling*/
-#button-section {
-    background-color: var(--background-color-1);
-    height: 5vh;
-}
-
-#button-section button {
-    height: 100%;
-    width: 10vw;
-    border-radius: 8px;
-    font-size: 24px;
-    font-weight: 550;
-    color: var(--text-color-2);
-    background-color: var(--button-color);
-}
-
-#button-section button:hover {
-    background-color: var(--text-color-1);
-    transition: 0.2s;
-    cursor: pointer;
+p {
+    font-size: 12px;
 }
