Added ability to show and replace sprites images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
 p {
     font-size: 12px;
 }
+
+.poke-name {
+    text-shadow: 0 0 5px #2f48b6;
+    text-transform: capitalize;
+}
+
+.poke-img {
+    width: 60%;
+}
