--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,3 +17,79 @@ p {
     max-height: 50vh;
     min-width: 100vw;
 }
+
+.type-normal {
+    background-color: #A8A878;
+}
+
+.type-fire {
+    background-color: #F08030;
+}
+
+.type-water {
+    background-color: #6890F0;
+}
+
+.type-grass {
+    background-color: #78C850;
+}
+
+.type-electric {
+    background-color: #F8D030;
+}
+
+.type-ice {
+    background-color: #98D8D8;
+}
+
+.type-fighting {
+    background-color: #C03028;
+}
+
+.type-poison {
+    background-color: #A040A0;
+}
+
+.type-ground {
+    background-color: #E0C068;
+}
+
+.type-psychic {
+    background-color: #F85888;
+}
+
+.type-bug {
+    background-color: #A8B820;
+}
+
+.type-rock {
+    background-color: #B8A038;
+}
+
+.type-ghost {
+    background-color: #705898;
+}
+
+.type-dark {
+    background-color: #705848;
+}
+
+.type-dragon {
+    background-color: #7038F8;
+}
+
+.type-steel {
+    background-color: #B8B8D0;
+}
+
+.type-fairy {
+    background-color: #F0B6BC;
+}
+
+.type-unknown {
+    background-color: #97bebc;
+}
+
+.type-shadow {
+    background-color: #3f3947;
+}
